--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
 }
 
 :root {
-  --lighter: #f5f5f5;
+  --bg-lighter: #f5f5f5;
   --bg-div: #4caf50;
 }
 
 body {
   font-family: Inter, sans-serif;
-  background: var(--lighter);
+  background: var(--bg-lighter);
 }
 
 .container {
@@ -23,7 +23,11 @@ body {
 
 .borders {
   background: var(--bg-div);
-  width: 400px;
-  height: 400px;
-  border-radius: 15px;
+  margin: auto 0;
+  font-size: 1.5rem;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
