--- a/style.css
+++ b/style.css
@@ -8,15 +8,13 @@
   --bg-div: #4caf50;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Inter, sans-serif;
   background: var(--bg-lighter);
-}
-
-input {
-  width: 100%;
-  padding: 12px 16px;
-  font-size: 1.3rem;
 }
 
 .container {
@@ -27,7 +25,7 @@ input {
   align-items: center;
 }
 
-.borders {
+.my-square {
   background: var(--bg-div);
   margin: auto 0;
   font-size: 1.5rem;
@@ -38,9 +36,15 @@ input {
   align-items: center;
 }
 
+.input-border {
+  font-size: 1.3rem;
+  width: 100%;
+  padding: 12px 16px;
+  margin-top: 1rem;
+}
+
 .copy-clipboard {
   width: 100%;
-  margin-top: 0.5rem;
   padding: 12px 16px;
 }
 .copy-clipboard:hover {
