--- a/style.css
+++ b/style.css
@@ -14,20 +14,24 @@
 
 body {
   font-family: Inter, sans-serif;
-  background: var(--bg-lighter);
+  background: linear-gradient(to right, #85D8CE, #085078);
+}
+
+h1 {
+  font-size: 72px;
+  background: -webkit-linear-gradient(#1cd8d2, #93edc7);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .container {
   max-width: 650px;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .my-square {
-  background: var(--bg-div);
-  margin: auto 0;
+  background: linear-gradient(to right, #1cd8d2, #93edc7);
+  margin-top: 2rem;
   font-size: 1.5rem;
   width: 650px;
   height: 350px;
@@ -41,11 +45,15 @@ body {
   width: 100%;
   padding: 12px 16px;
   margin-top: 1rem;
+  outline: none;
 }
 
 .copy-clipboard {
   width: 100%;
   padding: 12px 16px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 .copy-clipboard:hover {
   cursor: pointer;
