--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@
 
 body {
   font-family: Inter, sans-serif;
-  background: linear-gradient(to right, #85D8CE, #085078);
+  background: linear-gradient(to right, #085078, #85d8ce);
 }
 
 h1 {
   font-size: 72px;
-  background: -webkit-linear-gradient(#1cd8d2, #93edc7);
+  background-image: linear-gradient(#1cd8d2, #93edc7);
   background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 
 .container {
