--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 }
 
 :root {
-  --bg-lighter: #f5f5f5;
+  --light: #f5f5f5;
+  --grey: #333333;
   --bg-div: #4caf50;
 }
 
@@ -17,20 +18,20 @@ body {
   background: linear-gradient(to right, #085078, #85d8ce);
 }
 
-h1 {
+.container {
+  max-width: 650px;
+  margin: 0 auto;
+}
+
+.gradient {
   font-size: 72px;
   background-image: linear-gradient(#1cd8d2, #93edc7);
   background-clip: text;
   color: transparent;
 }
 
-.container {
-  max-width: 650px;
-  margin: 0 auto;
-}
-
 .my-square {
-  background: linear-gradient(to right, #1cd8d2, #93edc7);
+  background: linear-gradient(#1cd8d2, #93edc7);
   margin-top: 2rem;
   font-size: 1.5rem;
   width: 650px;
@@ -40,21 +41,35 @@ h1 {
   align-items: center;
 }
 
+.interactions {
+  margin-top: 1rem;
+  display: flex;
+}
+
 .input-border {
   font-size: 1.3rem;
   width: 100%;
   padding: 12px 16px;
-  margin-top: 1rem;
   outline: none;
+  border: none;
 }
 
 .copy-clipboard {
-  width: 100%;
   padding: 12px 16px;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-transform: uppercase;
+  font-size: 1rem;
+  background-image: linear-gradient(#1cd8d2, #93edc7);
+  transition: background-image 2s;
+  border: none;
 }
 .copy-clipboard:hover {
   cursor: pointer;
+}
+
+.toast {
+  min-width: 250px;
+  background: var(--grey);
+  color: var(--light);
+  text-align: center;
+  padding-inline: 15px;
+  border-radius: 2px;
 }
